@@ -4,6 +4,7 @@ v0.8.0
 * [BGBUILD-68] Global .boxgrinder/config or rc style file for config
 * [BGBUILD-79] Allow to use BoxGrinder Build as a library
 * [BGBUILD-127] Use appliance definition object instead of a file when using BG as a library
+* [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
 
 v0.7.1
 
